# ESM-Toolkit

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: utils.cmake
source/: CMakeLists.txt  build_project.cmd  esmReader.cpp  xmlUtils.cpp
source/include/: pch.h  xmlUtils.h
source/records/: CMakeLists.txt  Record.cpp  RecordCommon.cpp  RecordGeneral.cpp  RecordHeader.cpp
source/records/include/: Record.h  RecordHeader.h
source/subrecords/: CMakeLists.txt  SubrecordAlchemyApparatusData.cpp  SubrecordAlchemyData.cpp  SubrecordArmourData.cpp  SubrecordBodyPartData.cpp  SubrecordBookData.cpp  SubrecordCellData.cpp  SubrecordClassData.cpp  SubrecordClothingData.cpp  SubrecordCommon.cpp  SubrecordContainerData.cpp  SubrecordCreatureData.cpp  SubrecordDataFileInfo.cpp  SubrecordDescription.cpp  SubrecordEnchantmentData.cpp  SubrecordFactionData.cpp  SubrecordFileHeader.cpp  SubrecordFloatValue.cpp  SubrecordFriendlyName.cpp  SubrecordHeader.cpp  SubrecordIDValue.cpp  SubrecordIngridientData.cpp  SubrecordIntValue.cpp  SubrecordLandscapeData.cpp  SubrecordLeveledList.cpp  SubrecordLightData.cpp  SubrecordLockpickData.cpp  SubrecordMagicEffectData.cpp  SubrecordMasterFile.cpp  SubrecordMiscWeaponData.cpp  SubrecordNPCData.cpp  SubrecordName.cpp  SubrecordRaceData.cpp  SubrecordRankOrRaceName.cpp  SubrecordRepairItemData.cpp  SubrecordScriptHeader.cpp  SubrecordSkillData.cpp  SubrecordSpellData.cpp  SubrecordStringValue.cpp  SubrecordUnknown.cpp  (+2 more)
source/subrecords/include/: SubrecordAlchemyApparatusData.h  SubrecordAlchemyData.h  SubrecordArmourData.h  SubrecordBodyPartData.h  SubrecordBookData.h  SubrecordCellData.h  SubrecordClassData.h  SubrecordClothingData.h  SubrecordCommon.h  SubrecordContainerData.h  SubrecordCreatureData.h  SubrecordDataFileInfo.h  SubrecordDescription.h  SubrecordEnchantmentData.h  SubrecordFactionData.h  SubrecordFactionStringValue.h  SubrecordFileHeader.h  SubrecordFloatValue.h  SubrecordFriendlyName.h  SubrecordHeader.h  SubrecordIDValue.h  SubrecordIngridientData.h  SubrecordIntValue.h  SubrecordLandscapeData.h  SubrecordLeveledList.h  SubrecordLightData.h  SubrecordLockpickData.h  SubrecordMagicEffectData.h  SubrecordMasterFile.h  SubrecordMiscWeaponData.h  SubrecordNPCData.h  SubrecordName.h  SubrecordRaceData.h  SubrecordRankOrRaceName.h  SubrecordRepairItemData.h  SubrecordScriptHeader.h  SubrecordSkillData.h  SubrecordSpecialAbilityName.h  SubrecordSpellData.h  SubrecordStringValue.h  (+3 more)
